--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
           </tr>
           <tr onclick="javascript:showRow(this);">
             <td>Dimitar</td>
-            <td>Collins</td>
+            <td>colins</td>
             <td>33</td>
-            <td>19.99</td>
+            <td>19.995</td>
             <td>25.1%</td>
             <td>-7</td>
           </tr>
@@ -129,10 +129,10 @@
             <td>+9</td>
           </tr>
           <tr onclick="javascript:showRow(this);">
-            <td>Nureleign</td>
-            <td>Collins</td>
-            <td>56</td>
-            <td>153.19</td>
+            <td>Nurelegn</td>
+            <td>G</td>
+            <td>48</td>
+            <td>19.75</td>
             <td>23%</td>
             <td>+9</td>
           </tr>
